--- a/ix-lab3/lab3-cluster.ipynb
+++ b/ix-lab3/lab3-cluster.ipynb
@@ -28,10 +28,82 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"tagsCoordinates.pickle\", \"rb\") as f:\n",
+    "    tagsCoord = pickle.load(f, encoding=\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "twoDir = np.zeros([len(tagsCoord),2])\n",
+    "threeDir = np.zeros([len(tagsCoord),3])\n",
+    "fourDir = np.zeros([len(tagsCoord),4])\n",
+    "fiveDir = np.zeros([len(tagsCoord),5])\n",
+    "\n",
+    "i = 0\n",
+    "for tags,coord in tagsCoord.items():\n",
+    "    twoDir[i,0] = coord[0]\n",
+    "    twoDir[i,1] = coord[1]\n",
+    "    i += 1\n",
+    "\n",
+    "kmeans = KMeans(n_clusters=2).fit(twoDir)\n",
+    "print(kmeans.cluster_centers_ )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from bokeh.io import show, output_notebook\n",
+    "from bokeh.plotting import figure, ColumnDataSource\n",
+    "from bokeh.models import HoverTool, ResetTool, PanTool, WheelZoomTool, SaveTool\n",
+    "output_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Categorial colors\n",
+    "from bokeh.palettes import Dark2_8\n",
+    "\n",
+    "source = ColumnDataSource(\n",
+    "    data={\n",
+    "        \"x\": [x[0] for x in data],\n",
+    "        \"y\": [x[1] for x in data],\n",
+    "        \"name\": [x[2] for x in data],\n",
+    "        \"color\": [Dark2_8[x[4]] for x in data],\n",
+    "    })\n",
+    "\n",
+    "hover = HoverTool(\n",
+    "    tooltips=[\n",
+    "        (\"Name\", \"@name\"),\n",
+    "    ])\n",
+    "tools = [hover, ResetTool(), PanTool(), WheelZoomTool(), SaveTool()]\n",
+    "\n",
+    "p = figure(plot_width=960, plot_height=360, tools=tools, title=\"Mouse over the dots\")\n",
+    "p.circle(\"x\", \"y\", source=source, size=20, color=\"color\", alpha=0.5)\n",
+    "show(p, notebook_handle=True)"
+   ]
   }
  ],
  "metadata": {
