--- a/ix-lab3/lab3-dimred.ipynb
+++ b/ix-lab3/lab3-dimred.ipynb
@@ -101,7 +101,7 @@
     "tagsVarSort = np.sort(tagsVar)\n",
     "\n",
     "plt.plot(tagsVar)\n",
-    "plt.xlabel('Tag')\n",
+    "plt.xlabel('Tags')\n",
     "plt.ylabel('Variance')\n",
     "plt.title(\"Variance of each tag\")"
    ]
@@ -115,17 +115,156 @@
    },
    "outputs": [],
    "source": [
-    "covMatrix = np.cov(matrix)\n",
-    "eigenvalues,eigenvector = np.linalg.eigh(covMatrix)\n",
+    "matrixCentered = matrix - matrix.mean(axis=0)\n",
+    "covMatrix = np.cov(matrixCentered, rowvar=False)\n",
+    "eigenvalues,eigenvectors = np.linalg.eigh(covMatrix)\n",
     "\n",
-    "plt.plot(eigenvaluesCov[0])\n",
-    "plt.title('Eigenvalues of the covariance matrix')\n",
-    "print(np.sum(eigenvalues))\n",
-    "print(np.argmin(eigenvalues[::-1].cumsum() < 2/3*eigenvalues.sum()) )\n",
-    "y = covMatrix.dot(eigenvector)\n",
-    "y = y[-36:,-36:]\n",
-    "print(y)"
+    "plt.plot(eigenvalues)\n",
+    "plt.title('Eigenvalues of the covariance matrix')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "nb_principal_direction = np.argmin(eigenvalues[::-1].cumsum() < 2/3*np.sum(eigenvalues))\n",
+    "print(nb_principal_direction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from scipy import spatial\n",
+    "\n",
+    "idxMaxEval = np.argsort(eigenvalues)[::-1][:5]\n",
+    "principalDirections = eigenvectors[:,idxMaxEval]\n",
+    "\n",
+    "tagsName = np.asarray(tags.map(lambda x: x['tag']).collect())\n",
+    "\n",
+    "def distance(direction):\n",
+    "    dist = np.empty(nb_tags)\n",
+    "    for i in range(nb_tags):\n",
+    "        dist[i] = spatial.distance.cosine(principalDirections[:,direction], matrixCentered[i,:])\n",
+    "    return dist\n",
+    "\n",
+    "def tenHighAndLow(direc, dist):\n",
+    "    index = np.argsort(dist)\n",
+    "    indexMin = index[:10]\n",
+    "    indexMax = index[-10:][::-1]\n",
+    "    print(direc, ' direction \\n------------------')\n",
+    "    print('Tags with highest coordinates:\\n', tagsName[indexMax])\n",
+    "    print('Tags with the lowest coordinates:\\n', tagsName[indexMin])\n",
+    "    print('\\n')\n",
+    "\n",
+    "tenHighAndLow('First', distance(0))\n",
+    "tenHighAndLow('Second', distance(1))\n",
+    "tenHighAndLow('Third', distance(2))\n",
+    "tenHighAndLow('Fourth', distance(3))\n",
+    "tenHighAndLow('Fifth', distance(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "newCoordinates = np.dot(matrix, principalDirections)\n",
+    "tagsDict = {}\n",
+    "for i in range(nb_tags):\n",
+    "    tagsDict[tagsName[i]] = tuple(newCoordinates[i,:])\n",
+    "\n",
+    "print(tagsDict)\n",
+    "with open(\"tagsCoordinates.pickle\", \"wb\") as f:\n",
+    "    pickle.dump(tagsDict, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"selected-movies.pickle\", \"rb\") as f:\n",
+    "    selectMovies = pickle.load(f, encoding=\"utf-8\")\n",
+    "print(selectMovies[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "movieId_array = np.sort(np.array(movieId_withTags.collect()))\n",
+    "relevanceSelecMovies = np.zeros([nb_tags,len(selectMovies)])\n",
+    "\n",
+    "for i,movie in enumerate(selectMovies):\n",
+    "    idx = np.argwhere(movieId_array==movie[0])\n",
+    "    relevanceSelecMovies[:,i] = matrixCentered[:,idx[0][0]]\n",
+    "\n",
+    "print(relevanceSelecMovies.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "twoMainDir = newCoordinates[:,:2]\n",
+    "coorSelectMovies = np.zeros([len(selectMovies)])\n",
+    "coorSelectMovies[0] = (1,2,3,4,5)\n",
+    "for i,movie in enumerate(relevanceSelecMovies.T):\n",
+    "    firstCoor = np.dot(movie,twoMainDir[:,0])\n",
+    "    secondCoor = np.dot(movie,twoMainDir[:,1])\n",
+    "    #coorSelectMovies[i] = (selectMovies[i][0], selectMovies[i][1], selectMovies[i][2], firstCoor, secondCoor)\n",
+    "    \n",
+    "print(coorSelectMovies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from bokeh.io import show, output_notebook\n",
+    "from bokeh.plotting import figure, ColumnDataSource\n",
+    "from bokeh.models import HoverTool, ResetTool, PanTool, WheelZoomTool, SaveTool\n",
+    "output_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
