--- a/ix-lab3/lab3-recsys.ipynb
+++ b/ix-lab3/lab3-recsys.ipynb
@@ -18,6 +18,7 @@
     "import json\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import pickle\n",
     "from operator import itemgetter\n",
     "%matplotlib inline\n",
     "plt.style.use(\"ggplot\")"
@@ -121,6 +122,7 @@
    "source": [
     "myRates = sc.textFile('my-ratings.txt').map(json.loads)\n",
     "newData = data.union(myRates)\n",
+    "count = newData.count()\n",
     "trainingSet = data.filter(lambda x: x['timestamp']%10 <= 7)\n",
     "validationSet = data.filter(lambda x: x['timestamp']%10 > 7)\n",
     "mean = trainingSet.map(lambda x: x['rating']).mean()\n",
@@ -174,16 +176,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def error(ratings):\n",
+    "    temp = validationSet.map(lambda x:(x['userId'],pow(ratings[(x['movieId'],x['userId'])]-x['rating'],2))).groupByKey().map(lambda x:sum(x[1])/len(x[1])).sum()\n",
+    "    print(temp)\n",
+    "    nbrUser = validationSet.map(lambda x:x['userId']).distinct().count()\n",
+    "    err = temp / nbrUser\n",
+    "    return err"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def error():\n",
-    "    temp = validationSet.map(lambda x:(x['userId'],pow(ratingDic[(x['movieId'],x['userId'])]-x['rating'],2))).groupByKey().map(lambda x:sum(x[1])/len(x[1])).sum()\n",
-    "    print(temp)\n",
-    "    nbrUser = validationSet.map(lambda x:x['userId']).distinct().count()\n",
-    "    err = temp / nbrUser\n",
-    "    return err\n",
+    "\n",
     "print(error())"
    ]
   },
@@ -191,10 +204,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.mllib.recommendation import ALS\n",
+    "from pyspark.mllib.recommendation import MatrixFactorizationModel\n",
+    "matrix = ALS.train(newData.map(lambda x:(x['userId'],x['movieId'],x['rating'])),12,lambda_=0.01)\n",
+    "result = matrix.predictAll(validationSet.map(lambda x:(x['userId'],x['movieId']))).collect()\n",
+    "resultDic = {}\n",
+    "for item in result:\n",
+    "    resultDic[(item[1],item[0])] = item[2]\n",
+    "print(error(resultDic))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "top10For123 = matrix.recommendProducts(123,10)\n",
+    "temp =[]\n",
+    "for item in top10For123:\n",
+    "    temp.append(item[1])\n",
+    "file = sc.textFile(\"/ix/ml-20m/movies.txt\").map(json.loads)\n",
+    "resultMovies =[]\n",
+    "file = file.filter(lambda x: x['movieId'] in temp).map(lambda x: (x['title'],x['genres'])).collect()\n",
+    "print(top10For123)\n",
+    "print(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"selected-movies.pickle\", \"rb\") as f:\n",
+    "    movies = pickle.load(f, encoding=\"utf-8\")\n",
+    "    \n",
+    "for movie in movies[:3]:\n",
+    "    print(movie)\n",
+    "\n",
+    "matrix = ALS.train(trainingSet.map(lambda x:(x['userId'],x['movieId'],x['rating'])),2)"
+   ]
   }
  ],
  "metadata": {
