--- a/ix-lab3/snippets.ipynb
+++ b/ix-lab3/snippets.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -43,11 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27278\n",
+      "{'movieId': 2, 'title': 'Jumanji (1995)', 'genres': ['Adventure', 'Children', 'Fantasy']}\n",
+      "Jumanji (1995)\n",
+      "Fantasy\n"
+     ]
+    }
+   ],
    "source": [
     "# Each line can be transformed into a Python dict using `json.loads`.\n",
     "data = sc.textFile(\"/ix/ml-20m/movies.txt\").map(json.loads)\n",
@@ -281,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -292,11 +303,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(780, 'Independence Day (a.k.a. ID4) (1996)', 0.6)\n",
+      "(5349, 'Spider-Man (2002)', 0.89)\n",
+      "(2571, 'Matrix, The (1999)', 0.87)\n"
+     ]
+    }
+   ],
    "source": [
     "# Reading an object from disk.\n",
     "with open(\"selected-movies.pickle\", \"rb\") as f:\n",
