--- a/ix-lab3/lab3-dimred.ipynb
+++ b/ix-lab3/lab3-dimred.ipynb
@@ -115,7 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "matrixCentered = matrix - matrix.mean(axis=0)\n",
+    "matrixCentered = matrix - matrix.mean(axis=1).reshape(1128,1)\n",
     "covMatrix = np.cov(matrixCentered, rowvar=False)\n",
     "eigenvalues,eigenvectors = np.linalg.eigh(covMatrix)\n",
     "\n",
@@ -153,11 +153,11 @@
     "def distance(direction):\n",
     "    dist = np.empty(nb_tags)\n",
     "    for i in range(nb_tags):\n",
-    "        dist[i] = spatial.distance.cosine(principalDirections[:,direction], matrixCentered[i,:])\n",
+    "        dist[i] = spatial.distance.cosine(principalDirections[:,direction], matrix[i,:])\n",
     "    return dist\n",
     "\n",
     "def tenHighAndLow(direc, dist):\n",
-    "    index = np.argsort(dist)\n",
+    "    index = np.argsort(dist)[::-1]\n",
     "    indexMin = index[:10]\n",
     "    indexMax = index[-10:][::-1]\n",
     "    print(direc, ' direction \\n------------------')\n",
@@ -185,10 +185,10 @@
     "\n",
     "newCoordinates = np.dot(matrix, principalDirections)\n",
     "tagsDict = {}\n",
+    "\n",
     "for i in range(nb_tags):\n",
     "    tagsDict[tagsName[i]] = tuple(newCoordinates[i,:])\n",
     "\n",
-    "print(tagsDict)\n",
     "with open(\"tagsCoordinates.pickle\", \"wb\") as f:\n",
     "    pickle.dump(tagsDict, f)"
    ]
@@ -233,14 +233,12 @@
    "outputs": [],
    "source": [
     "twoMainDir = newCoordinates[:,:2]\n",
-    "coorSelectMovies = np.zeros([len(selectMovies)])\n",
-    "coorSelectMovies[0] = (1,2,3,4,5)\n",
+    "coorSelectMovies = []\n",
+    "\n",
     "for i,movie in enumerate(relevanceSelecMovies.T):\n",
     "    firstCoor = np.dot(movie,twoMainDir[:,0])\n",
     "    secondCoor = np.dot(movie,twoMainDir[:,1])\n",
-    "    #coorSelectMovies[i] = (selectMovies[i][0], selectMovies[i][1], selectMovies[i][2], firstCoor, secondCoor)\n",
-    "    \n",
-    "print(coorSelectMovies)"
+    "    coorSelectMovies.append((selectMovies[i][0], selectMovies[i][1], int(selectMovies[i][2]*255), firstCoor, secondCoor))"
    ]
   },
   {
@@ -261,10 +259,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from bokeh.palettes import Viridis256\n",
+    "\n",
+    "source = ColumnDataSource(\n",
+    "    data={\n",
+    "        \"id\": [x[0] for x in coorSelectMovies],\n",
+    "        \"movie\": [x[1] for x in coorSelectMovies],\n",
+    "        \"score\": [Viridis256[x[2]] for x in coorSelectMovies],\n",
+    "        \"x\": [x[3] for x in coorSelectMovies],\n",
+    "        \"y\": [x[4] for x in coorSelectMovies],\n",
+    "    })\n",
+    "\n",
+    "hover = HoverTool(\n",
+    "    tooltips=[\n",
+    "        (\"Movie\", \"@movie\"),\n",
+    "    ])\n",
+    "tools = [hover, ResetTool(), PanTool(), WheelZoomTool(), SaveTool()]\n",
+    "\n",
+    "p = figure(plot_width=960, plot_height=360, tools=tools, title=\"Mouse over the dots\")\n",
+    "p.circle(\"x\", \"y\", source=source, size=20, color=\"score\", alpha=0.5)\n",
+    "show(p, notebook_handle=True)"
+   ]
   }
  ],
  "metadata": {
@@ -273,18 +293,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
   }
  },
  "nbformat": 4,
