--- a/ix-lab3/lab3-cluster.ipynb
+++ b/ix-lab3/lab3-cluster.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -19,6 +19,12 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pickle\n",
+    "from scipy import spatial\n",
+    "from bokeh.io import show, output_notebook\n",
+    "from bokeh.plotting import figure, ColumnDataSource\n",
+    "from bokeh.models import HoverTool, ResetTool, PanTool, WheelZoomTool, SaveTool\n",
+    "output_notebook()\n",
+    "from bokeh.palettes import Dark2_8\n",
     "\n",
     "%matplotlib inline\n",
     "plt.style.use(\"ggplot\")"
@@ -55,24 +61,8 @@
     "for tags,coord in tagsCoord.items():\n",
     "    twoDir[i,0] = coord[0]\n",
     "    twoDir[i,1] = coord[1]\n",
-    "    i += 1\n",
-    "\n",
-    "kmeans = KMeans(n_clusters=2).fit(twoDir)\n",
-    "print(kmeans.cluster_centers_ )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from bokeh.io import show, output_notebook\n",
-    "from bokeh.plotting import figure, ColumnDataSource\n",
-    "from bokeh.models import HoverTool, ResetTool, PanTool, WheelZoomTool, SaveTool\n",
-    "output_notebook()"
+    "    i += 1    \n",
+    "    \n"
    ]
   },
   {
@@ -83,25 +73,71 @@
    },
    "outputs": [],
    "source": [
+    "def drawPlot(array,color):\n",
+    "    source = ColumnDataSource(\n",
+    "        data={\n",
+    "            \"x\": [x[0] for x in array ],\n",
+    "            \"y\": [x[1] for x in array],\n",
+    "            \"name\": [x for x in tagsCoord.keys()],\n",
+    "            \"color\": [Dark2_8[x] for x in color],\n",
+    "        })\n",
+    "\n",
+    "    hover = HoverTool(\n",
+    "        tooltips=[\n",
+    "            (\"Name\", \"@name\"),\n",
+    "        ])\n",
+    "    tools = [hover, ResetTool(), PanTool(), WheelZoomTool(), SaveTool()]\n",
+    "\n",
+    "    p = figure(plot_width=960, plot_height=360, tools=tools, title=\"Mouse over the dots\")\n",
+    "    p.circle(\"x\", \"y\", source=source, size=20, color=\"color\", alpha=0.5)\n",
+    "    return p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def computeCluster(k,array):\n",
+    "    kmeans = KMeans(n_clusters=k).fit(array)\n",
+    "    color =[]\n",
+    "    for item in array:\n",
+    "        d1 =spatial.distance.euclidean(item,kmeans.cluster_centers_[0])\n",
+    "        d2 =spatial.distance.euclidean(item,kmeans.cluster_centers_[1])\n",
+    "        if d1<d2:\n",
+    "            color.append(0)\n",
+    "        else:\n",
+    "            color.append(2)\n",
+    "    return drawPlot(array,color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "s=computeCluster(2,twoDir)\n",
+    "show(s,notebook_handle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "# Categorial colors\n",
-    "from bokeh.palettes import Dark2_8\n",
     "\n",
-    "source = ColumnDataSource(\n",
-    "    data={\n",
-    "        \"x\": [x[0] for x in data],\n",
-    "        \"y\": [x[1] for x in data],\n",
-    "        \"name\": [x[2] for x in data],\n",
-    "        \"color\": [Dark2_8[x[4]] for x in data],\n",
-    "    })\n",
     "\n",
-    "hover = HoverTool(\n",
-    "    tooltips=[\n",
-    "        (\"Name\", \"@name\"),\n",
-    "    ])\n",
-    "tools = [hover, ResetTool(), PanTool(), WheelZoomTool(), SaveTool()]\n",
     "\n",
-    "p = figure(plot_width=960, plot_height=360, tools=tools, title=\"Mouse over the dots\")\n",
-    "p.circle(\"x\", \"y\", source=source, size=20, color=\"color\", alpha=0.5)\n",
     "show(p, notebook_handle=True)"
    ]
   }
