--- a/ix-lab3/snippets.ipynb
+++ b/ix-lab3/snippets.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -43,22 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27278\n",
-      "{'movieId': 2, 'title': 'Jumanji (1995)', 'genres': ['Adventure', 'Children', 'Fantasy']}\n",
-      "Jumanji (1995)\n",
-      "Fantasy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Each line can be transformed into a Python dict using `json.loads`.\n",
     "data = sc.textFile(\"/ix/ml-20m/movies.txt\").map(json.loads)\n",
@@ -259,6 +248,8 @@
    },
    "outputs": [],
    "source": [
+    "inspect \n",
+    "Out[8]:\n",
     "# Categorial colors\n",
     "from bokeh.palettes import Dark2_8\n",
     "\n",
@@ -292,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -303,21 +294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(780, 'Independence Day (a.k.a. ID4) (1996)', 0.6)\n",
-      "(5349, 'Spider-Man (2002)', 0.89)\n",
-      "(2571, 'Matrix, The (1999)', 0.87)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Reading an object from disk.\n",
     "with open(\"selected-movies.pickle\", \"rb\") as f:\n",
