--- a/ix-lab3/lab3-recsys.ipynb
+++ b/ix-lab3/lab3-recsys.ipynb
@@ -57,6 +57,7 @@
     "item = data.map(itemgetter('movieId'))\n",
     "item = item.map(lambda x: (x,1))\n",
     "item = item.reduceByKey(lambda a,b:a+b)\n",
+    "item = item.map(lambda x: x[1])\n",
     "user = user.map(lambda x:x[1])"
    ]
   },
@@ -68,26 +69,19 @@
    },
    "outputs": [],
    "source": [
-    "print(data.filter(lambda x: x['userId'] == 1).count())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print(user.count())\n",
     "x = (user.collect())\n",
     "y = (item.collect())\n",
     "plt.plot(sorted(x))\n",
     "plt.show()\n",
-    "plt.plot(y[1])\n",
-    "plt.show()\n",
-    "\n",
-    "print(x[0])\n"
+    "plt.plot(sorted(y))\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the ratings are not balanced uniformly accros users and movies"
    ]
   },
   {
@@ -120,6 +114,7 @@
    },
    "outputs": [],
    "source": [
+    "#Create trainig and validation st\n",
     "myRates = sc.textFile('my-ratings.txt').map(json.loads)\n",
     "newData = data.union(myRates)\n",
     "count = newData.count()\n",
@@ -137,7 +132,7 @@
    },
    "outputs": [],
    "source": [
-    "print(mean)\n",
+    "#Compute user bias\n",
     "userBias = trainingSet.map(lambda x:(x['userId'],x['rating']-mean)).groupByKey().map(lambda x:(x[0],sum(x[1])/len(x[1]))).collect()\n",
     "\n",
     "userBiasDic = {}\n",
@@ -147,6 +142,7 @@
     "for user in users:\n",
     "    if user not in userBiasDic.keys():\n",
     "        userBiasDic[user] = 0\n",
+    "#Compute item bias\n",
     "itemBias = trainingSet.map(lambda x: (x['movieId'],x['rating']-mean-userBiasDic[x['userId']])).groupByKey().map(lambda x:(x[0],sum(x[1])/len(x[1]))).sortByKey().collect()\n",
     "itemBiasDic = {}\n",
     "for item in itemBias:\n",
@@ -165,6 +161,7 @@
    },
    "outputs": [],
    "source": [
+    "#Compute predicted ratings\n",
     "rating = validationSet.map(lambda x: (x['movieId'],x['userId'],mean+userBiasDic[x['userId']]+itemBiasDic[x['movieId']])).collect()\n",
     "ratingDic = {}\n",
     "for item in rating:\n",
@@ -181,8 +178,8 @@
    "outputs": [],
    "source": [
     "def error(ratings):\n",
+    "    print(ratings)\n",
     "    temp = validationSet.map(lambda x:(x['userId'],pow(ratings[(x['movieId'],x['userId'])]-x['rating'],2))).groupByKey().map(lambda x:sum(x[1])/len(x[1])).sum()\n",
-    "    print(temp)\n",
     "    nbrUser = validationSet.map(lambda x:x['userId']).distinct().count()\n",
     "    err = temp / nbrUser\n",
     "    return err"
@@ -197,7 +194,21 @@
    "outputs": [],
    "source": [
     "\n",
-    "print(error())"
+    "print(error(ratingDic))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0.8500001435"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With a low rank, the result is less precise but the computation is fast. It is the opposite with high rank"
    ]
   },
   {
@@ -208,15 +219,26 @@
    },
    "outputs": [],
    "source": [
+    "#Try to find the best lambda\n",
     "from pyspark.mllib.recommendation import ALS\n",
     "from pyspark.mllib.recommendation import MatrixFactorizationModel\n",
-    "matrix = ALS.train(newData.map(lambda x:(x['userId'],x['movieId'],x['rating'])),12,lambda_=0.01)\n",
-    "result = matrix.predictAll(validationSet.map(lambda x:(x['userId'],x['movieId']))).collect()\n",
-    "resultDic = {}\n",
-    "for item in result:\n",
-    "    resultDic[(item[1],item[0])] = item[2]\n",
-    "print(error(resultDic))\n",
-    "    \n"
+    "lambdas = np.arange(0.01,0.1,0.01)\n",
+    "minErr = 500\n",
+    "bestLambda = 0\n",
+    "for lamb in lambdas:\n",
+    "    matrix = ALS.train(newData.map(lambda x:(x['userId'],x['movieId'],x['rating'])),12,lambda_=lamb)\n",
+    "    result = matrix.predictAll(validationSet.map(lambda x:(x['userId'],x['movieId']))).collect()\n",
+    "    resultDic = {}\n",
+    "    for item in result:\n",
+    "        resultDic[(item[1],item[0])] = item[2]\n",
+    "    err = error(resultDic)\n",
+    "    print(err,\" with lambda =\",lamb)\n",
+    "    if err<minErr:\n",
+    "        bestLambda = lamb\n",
+    "        minErr = err\n",
+    "    \n",
+    "    \n",
+    "print(minErr,bestLambda)"
    ]
   },
   {
@@ -234,25 +256,14 @@
     "file = sc.textFile(\"/ix/ml-20m/movies.txt\").map(json.loads)\n",
     "resultMovies =[]\n",
     "file = file.filter(lambda x: x['movieId'] in temp).map(lambda x: (x['title'],x['genres'])).collect()\n",
-    "print(top10For123)\n",
     "print(file)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "with open(\"selected-movies.pickle\", \"rb\") as f:\n",
-    "    movies = pickle.load(f, encoding=\"utf-8\")\n",
-    "    \n",
-    "for movie in movies[:3]:\n",
-    "    print(movie)\n",
-    "\n",
-    "matrix = ALS.train(trainingSet.map(lambda x:(x['userId'],x['movieId'],x['rating'])),2)"
+    "We can see that the user 123 likes the drama movies"
    ]
   }
  ],
