--- a/ix-lab3/lab3-cluster.ipynb
+++ b/ix-lab3/lab3-cluster.ipynb
@@ -25,6 +25,7 @@
     "from bokeh.models import HoverTool, ResetTool, PanTool, WheelZoomTool, SaveTool\n",
     "output_notebook()\n",
     "from bokeh.palettes import Dark2_8\n",
+    "from bokeh.layouts import row\n",
     "\n",
     "%matplotlib inline\n",
     "plt.style.use(\"ggplot\")"
@@ -38,6 +39,7 @@
    },
    "outputs": [],
    "source": [
+    "#We load the tags Coordinates\n",
     "with open(\"tagsCoordinates.pickle\", \"rb\") as f:\n",
     "    tagsCoord = pickle.load(f, encoding=\"utf-8\")"
    ]
@@ -52,17 +54,17 @@
    "source": [
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "twoDir = np.zeros([len(tagsCoord),2])\n",
-    "threeDir = np.zeros([len(tagsCoord),3])\n",
-    "fourDir = np.zeros([len(tagsCoord),4])\n",
-    "fiveDir = np.zeros([len(tagsCoord),5])\n",
+    "coordinates = np.zeros([len(tagsCoord),5])\n",
     "\n",
+    "#We modify the tags coordinates in order to be usable for the plot\n",
     "i = 0\n",
     "for tags,coord in tagsCoord.items():\n",
-    "    twoDir[i,0] = coord[0]\n",
-    "    twoDir[i,1] = coord[1]\n",
-    "    i += 1    \n",
-    "    \n"
+    "    coordinates[i,0] = coord[0]\n",
+    "    coordinates[i,1] = coord[1]\n",
+    "    coordinates[i,2] = coord[2]\n",
+    "    coordinates[i,3] = coord[3]\n",
+    "    coordinates[i,4] = coord[4]\n",
+    "    i += 1\n"
    ]
   },
   {
@@ -73,6 +75,7 @@
    },
    "outputs": [],
    "source": [
+    "#Draw The plot\n",
     "def drawPlot(array,color):\n",
     "    source = ColumnDataSource(\n",
     "        data={\n",
@@ -97,20 +100,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#This function cluster the datausing the k-means clustering algorithm for a given k and array\n",
     "def computeCluster(k,array):\n",
     "    kmeans = KMeans(n_clusters=k).fit(array)\n",
-    "    color =[]\n",
+    "    color =[]   \n",
     "    for item in array:\n",
-    "        d1 =spatial.distance.euclidean(item,kmeans.cluster_centers_[0])\n",
-    "        d2 =spatial.distance.euclidean(item,kmeans.cluster_centers_[1])\n",
-    "        if d1<d2:\n",
-    "            color.append(0)\n",
-    "        else:\n",
-    "            color.append(2)\n",
+    "        dist = []\n",
+    "        for d in range(k):\n",
+    "            #compute the distance between the nodes and the cluster_centers\n",
+    "            dist.append(spatial.distance.euclidean(item,kmeans.cluster_centers_[d]))\n",
+    "        idxColor = np.argsort(dist)\n",
+    "        color.append(idxColor[0])\n",
+    "    \n",
     "    return drawPlot(array,color)"
    ]
   },
@@ -122,23 +127,27 @@
    },
    "outputs": [],
    "source": [
-    "s=computeCluster(2,twoDir)\n",
-    "show(s,notebook_handle=True)"
+    "import itertools\n",
+    "\n",
+    "combi = itertools.combinations([0,1,2,3,4], 2)\n",
+    "\n",
+    "#We visualize the cluster for k = (2,3,4,5) and for each principal directions\n",
+    "for item in combi:\n",
+    "    for i in range(2,6):\n",
+    "        col1 = coordinates[:,item[0]]\n",
+    "        col2 = coordinates[:,item[1]]\n",
+    "        array = np.column_stack((col1,col2))\n",
+    "        s = computeCluster(i,array)\n",
+    "        show(s,notebook_handle=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Categorial colors\n",
+    "Exercise 3.11)\n",
     "\n",
-    "\n",
-    "\n",
-    "show(p, notebook_handle=True)"
+    "The first principal direction, associate with every other ones separate the cluster well."
    ]
   }
  ],
