--- a/ix-lab4/lab4-snippets.ipynb
+++ b/ix-lab4/lab4-snippets.ipynb
@@ -20,19 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5 4 3 2 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -41,7 +33,7 @@
     "# Argsort sort in increasing order, we use a trick: [::-1]\n",
     "decreasing_indices = np.argsort(x)[::-1]\n",
     "\n",
-    "print(x[decreasing_indices])"
+    "print([decreasing_indices])"
    ]
   },
   {
@@ -55,20 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<class 'int'>, {'b': 5, 'a': 1})\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "\n",
@@ -95,23 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  (0, 0)\t1.0\n",
-      "  (5, 0)\t42.0\n",
-      "  (100, 0)\t3.14156926536\n",
-      "  (2673, 62)\t100.0\n",
-      "  (9999, 99)\t1000.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.sparse import csr_matrix\n",
@@ -208,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -234,19 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'a': 0}, {'b': 1}, {'c': 2}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils import load_json\n",
     "\n",
@@ -256,6 +219,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
